<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">SonsHub</string>
    <string name="app_slogan">The Diary of Sons</string>
    <string name="nav_home">Home</string>
    <string name="nav_music">Music</string>
    <string name="nav_music_african">African</string>
    <string name="nav_music_western">Western</string>
    <string name="nav_music_hiphop">Hiphop</string>
    <string name="nav_music_album">Album</string>
    <string name="nav_music_mixtape">Mixtape</string>
    <string name="nav_video">Videos</string>
    <string name="nav_video_music_videos">Music Videos</string>
    <string name="nav_video_movies">Movies</string>
    <string name="nav_gist">Gist</string>
    <string name="nav_gist_news">News</string>
    <string name="nav_gist_event">Event</string>
    <string name="nav_gist_article">Article</string>
    <string name="nav_word_of_faith">Word of Faith</string>
    <string name="nav_word_of_faith_sermon">Sermon</string>
    <string name="nav_word_of_faith_devotional">Devotionals</string>
    <string name="nav_sonshubTV">SonsHub TV</string>
    <string name="navigation_open">Open Drawer</string>
    <string name="navigation_close">CLose Drawer</string>
    <string name="nav_download">Downloads</string>
    <string name="nav_about">About</string>
    <string name="nav_search">Search</string>
    <string name="more">More</string>
    <string name="developedBy">Developed and Maintained by</string>
    <string name="developer">Gigabyte Developers Incorporated</string>
    <string name="developer_url">https://www.gigabytedevelopersinc.com</string>
    <string name="changelog_url">https://www.gigabytedevelopersinc.com/apps/sonshub/changelog</string>
    <string name="version_number">App Version</string>
    <string name="youtube">Youtube</string>
    <string name="youtube_desc">Subscribe to our Channel</string>
    <string name="youtube_url">https://www.youtube.com/channel/UCeI6mPQmF5uy65FTEkaa7Tg</string>
    <string name="website">Website</string>
    <string name="website_desc">Check out our site</string>
    <string name="website_url">https://www.sonshub.com</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_desc">Like our page</string>
    <string name="facebook_url">https://www.facebook.com/sonshub</string>
    <string name="instagram">Instagram</string>
    <string name="instagram_desc">Follow us</string>
    <string name="instagram_url">https://www.instagram.com/sonshub_mobile</string>
    <string name="open_source_license">Open-Source License</string>
    <string name="open_source_desc">License details for open-source software</string>
    <string name="changeLog">Changelog</string>
    <string name="changeLog_desc">Keep track of all versions and changes</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_desc">SonsHub Mobile privacy policy</string>
    <string name="copyright_desc">Copyright © %1$s - SonsHub Media</string>
    <string name="continue_on">Continue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="audio_title">Audio</string>
    <string name="video_title">Video</string>

    <string name="update_notice">Version Update</string>
    <string name="update_notice_subhead">
        Hello dear, SonsHub Mobile has a new update
    </string>
    <string name="update_start_btn">Download and Install Update</string>
    <string name="warning">Warning</string>
    <string name="type_music">Search All Posts</string>
    <string name="warning_description">
        Hello! We noticed that the file you want to download already exists in your device.\nAre you sure you want to download this file again?\n\nNote: The existing file would be deleted!
    </string>
    <string name="update_description">Features!</string>

    <!-- Internet -->
    <string name="continue_without_internet">Continue without Internet</string>
    <string name="continue_with_edge">Continue with 2G Network</string>

    <!--AdMob -->
    <string name="admob_app_id">ca-app-pub-3567466237147953~5669907731</string>
    <string name="banner_ads">ca-app-pub-7212695185111501/4320943330</string>
    <string name="interstitial_ads">ca-app-pub-3567466237147953/7929594789</string>
    <!--<string name="gift_interstitial_ads">ca-app-pub-5831918283692281/1476297657</string>-->

    <!-- AdMod Test -->
    <string name="sample_admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="android_banner_test_ad">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_test_ads">ca-app-pub-3940256099942544/1033173712</string>
    <string name="sample_admob_native_ad_id">ca-app-pub-3940256099942544/2247696110</string>
    <string name="photogal_frag">Photo Gallery</string>
    <string name="fiction_frag">Fiction</string>
    <string name="latest_posts">Latest Posts</string>
    <string name="view_on_web">View on Web</string>
    <string name="custom_notify_channel">customNotificationChannel</string>
    <string name="back_button">Go Back</string>
    <string name="update_play_store">Update from Google PlayStore</string>
    <string name="toast_success_new_version">New version update found!</string>
    <string name="snackBar_update_check_cancel">OK, We would inform you when a new version update is available!</string>
    <string name="update_check_title">Check for Update</string>
    <string name="update_check_proceed">Check Update</string>
    <string name="update_check_cancel">Don\'t Worry</string>

    <string name="runtimeStrictMode">disableDeathOnFileUriExposure</string>
    <string name="support_development">Support Development</string>
    <string name="social">Social</string>
    <string name="other">Other</string>
    <string name="rate">Rate SonsHub Mobile</string>
    <string name="rate_desc">Love SonsHub Mobile? Why not support us today by giving SonsHub Mobile a 5-Star rating.</string>
    <string name="rate_btn_desc">Rate SonsHub Mobile on Play Store</string>
    <string name="share">Share to Friends</string>
    <string name="share_desc">Love SonsHub Mobile? Support Us today by sharing SonsHub Mobile across to your friends.</string>
    <string name="share_btn_desc">Share SonsHub Mobile to Friends</string>
    <string name="version_desc">Long Press to Check for Update</string>

    <!--Music Player Strings -->
    <string name="music_player">SonsHub Music Player</string>
    <string name="music_player_desc">
        Enjoy full offline access to all your music content. Play your songs with our Music Player.
    </string>

    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="genres">Genres</string>
    <string name="playlists">Playlists</string>

    <string name="play">Play</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="go_to_album">Go to Album</string>
    <string name="go_to_artist">Go to Artist</string>
    <string name="play_next">Play next</string>
    <string name="delete_from_device">Delete from Device</string>

    <string name="sort_order_entry_az">A-Z</string>
    <string name="sort_order_entry_za">Z-A</string>
    <string name="sort_order_entry_year">Year</string>
    <string name="sort_order_entry_duration">Duration</string>
    <string name="sort_order_entry_number_of_songs">Number of songs</string>

    <string name="number_song_add_playlist"><xliff:g example="1" id="number">%d</xliff:g> song added to playlist.</string>
    <string name="number_songs_add_playlist"><xliff:g example="1" id="number">%d</xliff:g> songs added to playlist.</string>

    <string name="create">Create</string>
    <string name="delete">Delete</string>

    <string name="create_new_playlist">Create New Playlist</string>
    <string name="delete_song_prompt">Delete Song?</string>
    <string name="enter_playlist_name">Enter playlist name…</string>
    <string name="playlist_created">Playlist created!</string>
    <string name="unable_create_playlist">Unable to create playlist!</string>

    <string name="media_playback">Media Playback</string>
    <string name="media_playback_controls">Media playback controls</string>

    <string name="all_songs">All Songs</string>
    <string name="casting_to_x">Casting to %1$s</string>
    <string name="nothing_playing">Nothing playing</string>
    <string name="now_playing_format">%1$s | %2$s</string>

    <string name="queue_ended">Queue ended</string>
    <string name="no_song_next">No song up next</string>

    <string name="shuffle_no_songs_error">There\'s no songs to shuffle</string>
    <string name="new_playlist">New Playlist</string>
    <string name="lyrics">Lyrics</string>
    <string name="up_next">Up Next</string>
    <string name="no_results">No Results</string>
    <string name="search_hint">Search for songs, artists, albums…</string>

    <string name="feedback_fab_text">Send Us a Feedback</string>
    <string name="feedback_report_error">I want to Report an Error</string>
    <string name="feedback_promotion">I want to Promote my Content</string>

    <!-- Downloader Strings -->
    <string name="delete_title">Are you sure you want to delete %1$s?</string>
    <string name="cancel">Cancel</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="wifiOnly">Download with WiFi Only</string>
    <string name="percent_progress">%1$d%%</string>
    <string name="download_eta_sec">%1$ds left</string>
    <string name="download_eta_min">%1$dm %2$ds left</string>
    <string name="download_eta_hrs">%1$dh %2$dm %3$ds left</string>
    <string name="download_speed_bytes">%1$d B/s</string>
    <string name="download_speed_kb">%1$s KB/s</string>
    <string name="download_speed_mb">%1$s MB/s</string>
    <string name="sample_music_title">This is the music title</string>
    <string name="stream_placeholder">Stream Placeholder</string>
    <string name="stream_toggle">Stream Toggle</string>
    <string name="no_downloads_yet">No active downloads yet!</string>
    <string name="no_downloaded_audio">Downloaded songs will be listed here</string>
    <string name="no_downloaded_videos">Downloaded videos will be listed here</string>

    <!-- App Update -->
    <string name="message_download_failed" translatable="false">Cannot download at this time!</string>
    <string name="message_download_canceled" translatable="false">Update download canceled!</string>
    <string name="message_download_completed" translatable="false">Download complete!</string>
    <string name="downloading_update_dialog" translatable="false">Downloading update!</string>

    <!-- AdColony -->
    <string name="adColony_app_id">appacf7d295b66041cf86</string>
    <string name="banner_zone_id">vz6b6bc3607a8147ab82</string>
    <string name="interstitial_zone_id">vz2a481e8d0d76452f98</string>
</resources>