<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AboutFragment"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_small">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/logo_size"
                android:src="@drawable/sonshub_about"
                android:layout_marginTop="@dimen/margin_normal"
                android:scaleType="centerCrop"
                android:padding="@dimen/padding_normal"
                android:contentDescription="@string/app_name"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_slogan"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/margin_small"
                android:fontFamily="@font/petitabold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <LinearLayout
                android:id="@+id/developedBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="@dimen/padding_small"
                android:layout_marginTop="@dimen/margin_small">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/developedBy"
                    android:textColor="@color/white"
                    android:fontFamily="@font/petitabold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/developer"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/grey_500"
                    android:fontFamily="@font/petitamedium"
                    android:layout_marginTop="@dimen/margin_small"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1.0dp"
                android:background="@color/grey"/>

            <include layout="@layout/card_about_info"/>
            <include layout="@layout/card_about_social" />
            <include layout="@layout/card_about_other" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0dp"
                android:background="@color/grey"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/grey_500"
                android:fontFamily="@font/petitamedium"
                android:text="@string/copyright_desc"
                android:gravity="center"
                android:padding="@dimen/padding_small"
                android:layout_marginTop="@dimen/margin_small"/>

        </LinearLayout>
    </ScrollView>
</FrameLayout>