<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/social"
        android:textColor="@color/white"
        android:fontFamily="@font/petitabold"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginStart="@dimen/padding_small"
        android:layout_marginTop="@dimen/padding_small"
        android:textStyle="bold"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:cardElevation="5dp"
        app:cardBackgroundColor="@color/colorPrimaryDarkL">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/padding_small">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:srcCompat="@drawable/ic_facebook" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/facebook"
                        android:textColor="@color/white"
                        android:fontFamily="@font/petitabold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="@color/grey_500"
                        android:fontFamily="@font/petitamedium"
                        android:text="@string/facebook_desc"
                        android:layout_marginTop="@dimen/margin_small"/>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0dp"
                android:background="@color/grey"/>
            <LinearLayout
                android:id="@+id/instagram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="@dimen/padding_small">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:srcCompat="@drawable/ic_instagram" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/instagram"
                        android:fontFamily="@font/petitabold"
                        android:textColor="@color/white"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="@color/grey_500"
                        android:fontFamily="@font/petitamedium"
                        android:text="@string/instagram_desc"
                        android:layout_marginTop="@dimen/margin_small"/>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0dp"
                android:background="@color/grey"/>
            <LinearLayout
                android:id="@+id/web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="@dimen/padding_small">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:srcCompat="@drawable/ic_website" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/website"
                        android:textColor="@color/white"
                        android:fontFamily="@font/petitabold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="@color/grey_500"
                        android:fontFamily="@font/petitamedium"
                        android:text="@string/website_desc"
                        android:layout_marginTop="@dimen/margin_small"/>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0dp"
                android:background="@color/grey"/>
            <!--Youtube Linear Layout -->
            <LinearLayout
                android:id="@+id/youtube"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="@dimen/padding_small">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:srcCompat="@drawable/ic_youtube" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/youtube"
                        android:textColor="@color/white"
                        android:fontFamily="@font/petitabold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="@color/grey_500"
                        android:fontFamily="@font/petitamedium"
                        android:text="@string/youtube_desc"
                        android:layout_marginTop="@dimen/margin_small"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>